<resources>
    <string name="app_name">نرخ روز</string>
    <string name="img_splash">imgSplash</string>
    <string name="gold_price">قیمت طلا و ارز</string>
    <string name="hot_news_gold">تازه ترین اخبار ارز و طلای روز جهان</string>
    <string name="price_gold_title">قیمت طلا</string>
    <string name="price_ars_title">قیمت ارز</string>
    <string name="img_desk">img_desk</string>
    <string name="crypto_price">قیمت ارز دیجیتال</string>
    <string name="Error_title_internet">خطا در اتصال به اینترنت</string>
    <string name="retry">تلاش دوباره</string>
    <string name="settings">تنظیمات</string>
    <string name="price_crypto">قیمت ارز دیجیتال</string>
</resources>