<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/Error_title_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/no_wifi"
        android:contentDescription="@string/img_desk" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.06999999">


        <Button
            android:id="@+id/btn_setting"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:background="@drawable/back_btn_settings"
            android:layout_weight="0.5"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_retry"
            android:text="@string/retry"
            android:textColor="@color/violet"
            android:textSize="22sp"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_margin="3dp"
            android:theme="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/back_btn_retry"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>